<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="marynakuzmenko.love_poems.YakbyTyZnav">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageYakbytyznavBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/yakby_ty_znav_intro"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/yakbytyznavbig"/>

            <TextView
                android:id="@+id/yakbytyznav_title_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imageYakbytyznavBig"
                android:paddingBottom="8dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/yakby_ty_znav"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yakbytyznav_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageYakbytyznavBig"
                android:layout_marginBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="8dp"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/imageShare"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@id/yakbytyznav_text"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="20dp"
                android:background="#ededed"
                android:clickable="true"
                android:onClick="shareContent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/sharethispoem"
                android:textColor="#6b6b6b"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageShare"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingLeft="32dp"
                android:paddingRight="8dp"
                android:paddingStart="32dp"
                android:text="@string/copyright"
                android:textColor="#818181"
                android:textSize="12sp"/>
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>